fixing back button and MVT button overlap on small screen

--- a/less/slides/project-credits.less
+++ b/less/slides/project-credits.less
@@ -9,9 +9,20 @@
         .full-block-content {
             max-width: 700px;
             margin: 0 auto;
+            padding: 20px 40px 20px 60px;
+            @media @screen-small-above {
+                padding: 20px 40px 20px 80px;
+            }
+            @media @screen-medium-above {
+                padding: 20px;
+            }
 
             h2 {
+                font-size: 24px;
                 text-transform: uppercase;
+                @media @screen-small-above {
+                    font-size: 30px;
+                }
             }
             
             p {
@@ -47,8 +58,10 @@
                 p {
                     font-family: "Gotham SSm", helvetica, arial, sans-serif;
                     font-size: 10px;
-                    margin-bottom: 8px;
+                    margin-bottom: 3px;
+                    line-height: 1.3;
                     @media @screen-small-above {
+                        margin-bottom: 8px;
                         line-height: 1;
                         font-size: 12px;
                     }
@@ -70,8 +83,7 @@
                 }
 
                 .share-story {
-
-                    width: 100px;
+                    display: inline-block;
                     float: none;
 
                     @media @screen-tiny-above {
@@ -81,9 +93,9 @@
                     }
 
                     a {
-                        width: 100px;
+                        
                         font-size: 12px;
-                        display: inline-block;
+                        display: block;
                         text-transform: uppercase;
                         font-weight: bold;
                         text-decoration: none;
